--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "babel src -d dist"
   },
   "author": "lokesh",
   "license": "ISC",
@@ -22,6 +23,9 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "swagger-ui-express": "^5.0.0"
   }
 }
